Update gui/build.gradle
Co-authored-by: Michael Rynkiewicz <michaelrynkiewicz3@gmail.com>